# cashier-chatbot

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.docs/: README.md  chatbot-tools.md  parsing-agent-prompts.md  post-confirmation-flow.md
data/: example_menu.json  inventory.json  normalized_menu.json  validation_test_set.json
scripts/: build_menu_index.py  create_app.py  fetch_inventory.py  generate_menu_embeddings.py  generate_menu_models.py  init_ai.py  list_menu_items.py  seed_menu.py  sync_inventory_id_maps.py  test_fuzzy_matching.py
src/: cache.py  config.py  constants.py  database.py  firebase.py  main.py
src/app/: __init__.py  api.py  lifespan.py  main.py
src/chatbot/: buffer.py  chatbot_ai.py  composer_prompt.py  constants.py  dependencies.py  exception_handlers.py  exceptions.py  food_order_handlers.py  gemini_client.py  guarded_tools.py  handlers.py  intent_routing.py  tools.py  (+16 more)
templates/: index.html
test_results/: run_20260331_004039.txt
tests/: chatbot.py  menu.py  smash_n_wings_menu.json  test_chatbot_execution_agent.py  test_chatbot_orchestrator.py  test_chatbot_v2_route.py  test_delta_history.py  test_extraction_prompts.py  test_gemini_client.py  test_guarded_tools.py  test_import_compat.py  test_lettuce_bun_modifier.py  test_line_item_grouping.py  test_llm_messages.py  test_menu_pricing.py  test_orchestrator_retry.py  test_order_cart_utils.py  test_order_handler_invalid_modifiers.py  test_order_handler_pricing.py  test_order_review_pricing.py  test_order_validation.py  test_patty_phrase_normalization.py  test_wings_quantity_from_name.py
(+99 files in other folders)
